--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -12,4 +12,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: au.icr.io/melon/frontend:2
+        image: au.icr.io/melon/frontend:190624
+        env:
+          - name: my-data.value
+            value: TTT
